# entity/department.go
@@ -1,15 +1,0 @@
-package entity
-
-type Department struct {
-	Name  string
-	Phone string
-}
-
-func (d *Department) PartialUpdate(updateModel Department) {
-	if len(updateModel.Name) != 0 {
-		d.Name = updateModel.Name
-	}
-	if len(updateModel.Phone) != 0 {
-		d.Phone = updateModel.Phone
-	}
-}
